# oryn

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml
benchmarks/: bench.sh  report.md
benchmarks/runtime/lua/: call_loop.lua  closure_call.lua  enum_match.lua  fib.lua  field_update.lua  list_iterate.lua  list_push.lua  map_build_lookup.lua  method_loop.lua  range_loop.lua  string_interp.lua  sum_loop.lua  try_chain.lua
combat/: combat.on  guard.on  main.on
crates/oryn/: Cargo.toml
crates/oryn-cli/: Cargo.toml
crates/oryn-cli/src/: commands.rs  errors.rs  main.rs  ui.rs
crates/oryn-cli/src/commands/: check.rs  disasm.rs  fmt.rs  lsp.rs  mod.rs  run.rs  test.rs
crates/oryn-cli/src/commands/lsp/: analysis.rs  definition.rs  diagnostics.rs  hover.rs  references.rs  symbols.rs
crates/oryn-fmt/: Cargo.toml
crates/oryn-lsp/: Cargo.toml
crates/oryn-lsp/src/: analysis.rs  definition.rs  diagnostics.rs  hover.rs  inlay.rs  lib.rs  references.rs  resolver.rs  server.rs  signature.rs  symbols.rs
crates/oryn/benches/: fib.rs
crates/oryn/src/: compiler.rs  docs.rs  errors.rs  lexer.rs  lib.rs  modules.rs  parser.rs  visitor.rs  vm.rs
crates/oryn/src/compiler/: block.rs  compile.rs  enums.rs  expr.rs  func.rs  obj.rs  stmt.rs  tables.rs  tests.rs  types.rs
crates/oryn/src/native/: globals.rs  intrinsics.rs  list.rs  map.rs  mod.rs  range.rs  string.rs
crates/oryn/src/parser/: ast.rs  parse.rs  tests.rs
crates/oryn/src/vm/: chunk.rs  exec.rs  value.rs
crates/oryn/tests/: basics.rs  common.rs  control_flow.rs  end_to_end.rs  errors.rs  first_class_functions.rs  functions.rs  higher_order.rs  modules.rs  native_methods.rs  objects.rs  strings.rs  types.rs
examples/: 01_hello.on  02_functions.on  03_control_flow.on  04_objects.on  05_composition.on  06_private_fields.on  07_nil_and_errors.on  08_tests.on  09_lists.on  10_maps.on  11_enums.on  12_first_class_functions.on  12_methods.on  README.md  fib.on  loops.on  obj.on  print.on  readme.on
examples/modules/: main.on  physics.on
playground/: main.on  physics.on
playground/math/: colors.on  vec2.on
(+45 files in other folders)
