[package]
name = "oryn-cli"
version = "0.0.0"
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "oryn"
path = "src/main.rs"

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.6.0", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
oryn = { path = "../oryn" }
oryn-fmt = { path = "../oryn-fmt" }
oryn-lsp = { path = "../oryn-lsp" }
