[package]
name = "oryn-lsp"
version = "0.0.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
lsp-server = "0.7.9"
lsp-types = "0.97.0"
oryn = { path = "../oryn" }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
